<?xml version="1.0"?>
<package format="3">
  <name>ugv01_room_explore</name>
  <version>0.0.1</version>
  <description>UGV01 room exploration with odom, SLAM and autonomous lidar exploration</description>

  <maintainer email="teto@example.com">teto</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ldlidar_node</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
